# quotevote

./: .gitignore  .vim-test  entrypoint.sh  manage.py  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html
app/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
app/fixtures/: quotes.json
app/templates/app/: base.html  home.html  mostwins_list.html  my_mostwins_list.html  quote_confirm_delete.html  quote_detail.html  quote_list.html  quotes_with_vote_counts.html  voteonquotes_detail.html  voteonquotes_form.html  voteonquotes_list.html  voteonquotes_vote.html
quotevote/: asgi.py  settings.py  urls.py  wsgi.py
